--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -13,7 +13,7 @@ You can install the released version of package RefTM from Github:
 devtools::install_github("zzchr1s/RefTM")
 ```
 
-## A. RefTM on scATAC data guided by aggregating single-cell data
+## A. RefTM-LDA workflow on scATAC data guided by aggregating single-cell data.
 
 First, load package RefTM:
 
@@ -22,6 +22,9 @@ library(RefTM)
 ```
 
 ### Input data
+
+reference data: pseudo-bulk *forebrain_ref_data*. MG and OC cells are left when constructing the pseudo-bulk reference data to investigate the influence of incomplete reference data.
+scCAS data: *forebrain_sc_data*
 
 ```{r}
 sc_data <- forebrain_sc_data
@@ -29,25 +32,43 @@ ref_data <- forebrain_ref_data
 cell_label <- forebrain_label_mat
 ```
 
-
 ### Modeling
 
 ```{r,eval=TRUE, results='hide', message=FALSE}
 set.seed(2022)
-result <- RefTM(sc_data,ref_data)
+result <- RefTM(sc_data, ref_data)
 ```
 
 ### Visualization
 
+#### Visualization of latent topics obtained by LDA (no reference)
+
+```{r,eval=TRUE, results='hide', message=FALSE}
+
+result_LDA <- RefTM.LDA(t(sc_data), k = 10, k0 = 0, bulk_beta = NULL)
+RetTM_tsne(result_LDA@gamma, cell_label)
+```
+
 #### Visualization of shared latent topics between reference data and scCAS data
 
-M3C::tsne()
+```{r,eval=TRUE, results='hide', message=FALSE}
+theta = RefTM_postprocess(result, k1 = 5)
+RetTM_tsne(theta[, 1:k1], cell_label)
+```
 
 #### Visualization of unique latent topics in scCAS data
 
-M3C::tsne()
+```{r,eval=TRUE, results='hide', message=FALSE}
+RetTM_tsne(theta[, -c(1:k1)], cell_label)
+```
 
-## B. RefTM on scATAC data guided by bulk data and including covariates
+#### Visualization of RefTM
+
+```{r,eval=TRUE, results='hide', message=FALSE}
+RetTM_tsne(theta, cell_label)
+```
+
+## B. RefTM-STM workflow on scATAC data guided by bulk data, with cell-specific covariates included.
 
 First, load package RefTM:
 
@@ -57,9 +78,15 @@ library(RefTM)
 
 ### Input data
 
+reference data: pseudo-bulk *CLPLMPPMPP_ref_data*.
+scCAS data: *CLPLMPPMPP_sc_data*.
+covariate: *CLPLMPPMPP_donor_label*.
+
+
 ```{r}
 sc_data <- CLPLMPPMPP_sc_data
 ref_data <- CLPLMPPMPP_ref_data
+donor_label <- CLPLMPPMPP_donor_label
 cell_label <- CLPLMPPMPP_label_mat
 ```
 
@@ -67,13 +94,61 @@ cell_label <- CLPLMPPMPP_label_mat
 
 ```{r,eval=TRUE, results='hide', message=FALSE}
 set.seed(2022)
-result <- RefTM(sc_data,ref_data,workflow = "STM",covariate = as.numeric(as.factor(CLPLMPPMPP_label_mat)))
+result <- RefTM(sc_data, ref_data, workflow = "STM", covariate = as.factor(donor_label))
+```
+
+### Visualization
+
+#### Visualization of RefTM without batch effect correction
+
+```{r,eval=TRUE, results='hide', message=FALSE}
+theta = RefTM_postprocess(result, k1 = 5, erase.BF = FALSE)
+RetTM_tsne(theta, cell_label)
+```
+
+#### Visualization of RefTM with batch effect correction
+
+```{r,eval=TRUE, results='hide', message=FALSE}
+theta = RefTM_postprocess(result, k1 = 5)
+RetTM_tsne(theta, cell_label)
 ```
 
 
+###Cell clustering
+
+```{r,eval=TRUE, results='hide', message=FALSE}
+Seurat_louvain <- RA3::RA3_clustering(t(theta), length(unique(cell_label)))
+```
+
+## C. Motif enrichment analysis
+
+### Input data
+
+reference data: pseudo-bulk *cerebellum_ref_data*.
+scCAS data: *cerebellum_sc_data*.
 
 
+```{r}
+sc_data <- cerebellum_sc_data
+ref_data <- cerebellum_ref_data
+cell_label <- cerebellum_label_mat
+```
 
+### Modeling
 
+```{r,eval=TRUE, results='hide', message=FALSE}
+set.seed(2022)
+result <- RefTM(sc_data, ref_data)
+```
 
+###Cell clustering
+
+```{r,eval=TRUE, results='hide', message=FALSE}
+theta = RefTM_postprocess(result, k1 = 5)
+Seurat_louvain <- RA3::RA3_clustering(t(theta), length(unique(cell_label)))
+```
+
+###
+peaks <- cerebellum_peaks
+louvain <- as.numeric(Seurat_louvain) 
 
